--- a/.env.example
+++ b/.env.example
@@ -23,3 +23,8 @@ NEXTAUTH_URL="http://localhost:3000"
 # Next Auth Discord Provider
 DISCORD_CLIENT_ID=""
 DISCORD_CLIENT_SECRET=""
+
+# Surfline APIs
+WAVE_API_URI=
+WIND_API=
+WEATHER_API=
